# unfraud

./: .gitignore  CHALLENGE.md  HYPOTHESIS_LOG.md  IMPLEMENTATION_PLAN.md  Makefile  PRD.md  README.md  analyzed_transactions.csv  run_all.sh
backend/: .gitignore  README.md  convert_dataset_script.py  export_challenge_csv.py  fraud_scorer.py  hybrid_scorer.py  main.py  ml_fraud_scorer.py  pyproject.toml  split_csv.py
backend/algo/: algo.py  lgbm_params.py  model.py  tune_lgbm.py
backend/algo/ops/: drift_metrics.json
backend/docs/: 01-overview.md  02-data-and-workflow.md  03-api-guide.md  04-heuristic-scoring.md  05-machine-learning-model.md  06-training-and-tuning.md  07-operations.md  README.md
backend/scripts/: score_transactions.py  train_fraud_model.py
backend/tests/: test_algo.py  test_api.py  test_export_challenge_csv.py  test_fraud_detection.py  test_hybrid_api.py  test_lgbm_params.py  test_ml_scoring.py  test_real_data.py
docs/: README.md  architecture.md  getting-started.md
frontend/: .env  README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  types.ts
frontend/src/api/: review.ts
frontend/src/components/: ReviewQueue.tsx  UploadCsv.tsx
frontend/src/components/review/: CardAnalysisPanel.tsx  CrossCardNetworkPanel.tsx  QueueList.tsx  ReviewSidebar.tsx  (+2 more)
frontend/src/data/: mockReviewItems.ts
frontend/src/hooks/: useReviewItems.ts
frontend/src/lib/: mlScoring.ts  reviewFeedback.ts  reviewMemory.ts  reviewSessions.ts  scoringViews.ts  utils.ts
scripts/: dev.sh
(+6 files in other folders)
