[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.136.3",
    "uvicorn[standard]>=0.48.0",
    "pandas>=2.0.0",
    "python-multipart>=0.0.9",
    "lightgbm>=4.6.0",
    "scikit-learn>=1.8.0",
    "shap>=0.46.0",
    "httpx2>=0.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
]
tune = [
    "optuna>=4.0.0",
]
